# Anthology

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  run_mcp.py
backend/app/: cli.py  main.py  mcp_server.py  storage.py
backend/app/routers/: projects.py  scrape.py
backend/app/services/: markdown.py  scraper.py
backend/tests/: conftest.py  test_api.py  test_markdown.py  test_scraper.py  test_storage.py
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/components/: MarkdownRenderer.test.tsx  ProjectCard.test.tsx  ScrapeForm.test.tsx  Sidebar.test.tsx
frontend/src/__tests__/pages/: Home.test.tsx  Library.test.tsx  ProjectDetail.test.tsx
frontend/src/__tests__/stores/: useProjectStore.test.ts  useScrapeStore.test.ts
frontend/src/components/: MarkdownRenderer.tsx  ModeToggle.tsx  ProjectCard.tsx  ScrapeForm.tsx  Sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  sheet.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Home.tsx  Library.tsx  ProjectDetail.tsx
frontend/src/stores/: useProjectStore.ts  useScrapeStore.ts  useSidebarStore.ts
